examples/test/testpolicy19884.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19884
  namespace: namespace195
spec:
  podSelector:
    matchLabels:
      key31: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value16
          key25: value11
          key32: value32
      podSelector:
        matchLabels:
          key28: value26
          key38: value39
